Prevent images from stretching

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ section {
 }
 
 .preview {
-  background-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
   margin-bottom: 10px;
@@ -96,7 +96,7 @@ section {
 
 @media screen and (min-width: 575px) {
   .preview {
-    /* width: 100%; */
+    background-size: cover;
     height: 215px;
     margin: 0px auto 10px auto;
   }
@@ -104,7 +104,7 @@ section {
 
 @media screen and (min-width: 991px) {
   .preview {
-    /* width: 100%; */
+    background-size: cover;
     height: 130px;
     margin: 0px auto;
   }
@@ -112,7 +112,6 @@ section {
 
 @media screen and (min-width: 1199px) {
   .preview {
-    /* width: 100%; */
     height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -123,19 +122,6 @@ section {
 .baku {
   background-image: url('../images/baku.jpg');
 }
-
-/* @media screen and (min-width: 991px) {
-  .baku {
-    margin-left: 50px;
-  }
-} */
-
-/* @media screen and (min-width: 991px) {
-  .madrid,
-  .rome {
-    margin-right: 60px;
-  }
-} */
 
 .london {
   background-image: url('../images/london.png');
